# ir

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.claude/skills/codex/: SKILL.md
research/: dspy_optimize.py  experiment.md  export_eval_data.py  pipeline.md
scripts/: download-beir.sh
src/: daemon.rs  error.rs  main.rs  types.rs
src/cli/: mod.rs  output.rs  progress.rs
src/config/: context.rs  mod.rs
src/db/: expander_cache.rs  fts.rs  mod.rs  schema.rs  schema.sql  vectors.rs
src/index/: chunker.rs  diff.rs  embed.rs  hasher.rs  mod.rs  scanner.rs
src/llm/: cache.rs  embedding.rs  expander.rs  mod.rs  reranker.rs
src/search/: bm25.rs  fan_out.rs  hybrid.rs  mod.rs  rrf.rs  vector.rs
