[package]
name = "ir"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ir"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
sqlite-vec = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
rayon = "1"
ignore = "0.4"
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"
colored = "2"
thiserror = "2"
memmap2 = "0.9"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
