[package]
name = "ir-search"
version = "0.4.1"
edition = "2024"
description = "Local markdown semantic search with hybrid BM25+vector retrieval and LLM reranking"
license = "MIT"
repository = "https://github.com/vlwkaos/ir"

[features]
default = ["llama-metal", "llama-openmp"]
llama-metal = ["llama-cpp-2/metal"]
llama-openmp = ["llama-cpp-2/openmp"]

[[bin]]
name = "ir"
path = "src/main.rs"

[[bin]]
name = "eval"
path = "src/bin/eval.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
sqlite-vec = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
rayon = "1"
ignore = "0.4"
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"
colored = "2"
thiserror = "2"
memmap2 = "0.9"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
hf-hub = "0.3"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "0.1.137", default-features = false }

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-2 = { version = "0.1.137", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
